main change: layout of agrivoltaics image and text

--- a/style.css
+++ b/style.css
@@ -1,118 +1,128 @@
-        /* Basic Reset */
-        * {
-            margin: 15px;
-            padding: 0;
-            box-sizing: border-box;
-        }
+/* Basic Reset */
+* {
+    margin: 15px;
+    padding: 0;
+    box-sizing: border-box;
+}
 
-        /* Body and general layout */
-        body {
-            background-color: #f5fafa;
-            font-family: Arial, Helvetica, sans-serif;
-            line-height: 1.6;
-            
-            color: #333;
-            padding: 20px;
-            
-            border-radius: 10px;
-        }
+/* Body and general layout */
+body {
+    background-color: #f5fafa;
+    font-family: Arial, Helvetica, sans-serif;
+    line-height: 1.6;
 
-        /* Header styles */
-        header {
-            width: 100%;
-        }
-        .nav-wrapper {
-            width: 30%;
-            margin-left: auto;
-        }
+    color: #333;
+    padding: 20px;
 
-        /* Navigation styling */
-        nav ul {
-            list-style-type: none;
-            display: flex;
-            justify-content: flex-end;
-            margin-bottom: 10px;
-        }
+    border-radius: 10px;
+}
 
-        nav ul li {
-            margin: 0 15px;
-        }
+/* Header styles */
+header {
+    width: 100%;
+}
+.nav-wrapper {
+    width: 30%;
+    margin-left: auto;
+}
 
-        nav ul li a {
-            text-decoration: none;
-            color: #333;
-            font-weight: bold;
-            font-size: 18px;
-        }
+/* Navigation styling */
+nav ul {
+    list-style-type: none;
+    display: flex;
+    justify-content: flex-end;
+    margin-bottom: 10px;
+}
 
-        nav ul li a:hover {
-            color: #22be68;
-        }
+nav ul li {
+    margin: 0 15px;
+}
 
-        /* Header title and image */
-       
+nav ul li a {
+    text-decoration: none;
+    color: #333;
+    font-weight: bold;
+    font-size: 18px;
+}
 
-        img {
-           
-            display: inside;
-            max-width: 30%;
-            height: auto;
-            margin: 0 auto 20px;
-        }
-        video {
-            max-width: 50%;
-        }
-        p {
-            text-align: center;
-            font-size: 16px;
-            margin-bottom: 20px;
-            color: #555;
-        }
+nav ul li a:hover {
+    color: #22be68;
+}
 
-        /* List styling */
-        ul {
-            list-style-type: disc;
-            margin-left: 40px;
-        }
+/* Header title and image */
 
-        ul li {
-            font-size: 16px;
-            margin-bottom: 10px;
-        }
 
-        .grid-container {
-            grid-template-columns: 1fr 1fr; 
-            grid-template-rows: 1fr 1fr; /* Top and Bottom for Left Section */
-            justify-content: center;
-            display: grid;
-            height: 5 px;
-            width:100%;
-        } 
+img {
+    display: inside;
+    max-width: 90%;
+    height: auto;
+    margin: 0 auto 20px;
+}
 
-        .left-section {
-            background-color: black;
-        }
-        .bottom-left {
-            background-color: black;
-            justify-content:space-around;
-        }
-        .top-left {
-            display: grid;
-            grid-template-columns: 1fr 1fr;  /* Ensures 2 images are side by side */
-            align-items: center;
-            background-color: black;
-        }
+video {
+    display: block;
+    margin: 0 auto;
+    max-width: 90%;
+}
 
-        .anabaena-image {
-            max-width: 60%;
-            height: auto;
-            gap: 1%;
-        }
-        .right-section {
-            display: flex;
-            flex-direction: column; 
-            display: flex;
-            justify-content: center;
-            align-items: center;
-           
-          }
+p {
+    text-align: left;
+    font-size: 16px;
+    margin-bottom: 20px;
+    color: #555;
+}
+
+/* List styling */
+ul {
+    list-style-type: disc;
+    margin-left: 40px;
+}
+
+ul li {
+    font-size: 16px;
+    margin-bottom: 10px;
+}
+
+.grid-container {
+    grid-template-columns: 1fr 1fr;
+    grid-template-rows: 1fr 1fr; /* Top and Bottom for Left Section */
+    justify-content: center;
+    display: grid;
+    height: 5 px;
+    width:100%;
+}
+
+.left-section {
+    background-color: black;
+}
+.bottom-left {
+    display: grid;
+    background-color: black;
+    justify-content:center;
+
+}
+.top-left {
+    display: grid;
+    grid-template-columns: 1fr 1fr;  /* Ensures 2 images are side by side */
+    align-items: center;
+    background-color: black;
+}
+
+.anabaena-image {
+    max-width: 60%;
+    height: auto;
+    gap: 1%;
+}
+.right-section {
+    display: grid;
+    justify-content: center;
+
+}
+
+.agrivoltaics-grid-container {
+    grid-template-columns: 2fr 3fr;
+    justify-content: center;
+    display: grid;
+    height: 5 px;
+    width:100%;
+}
