--- a/style.css
+++ b/style.css
@@ -15,9 +15,9 @@ body {
     font-family: Arial, Helvetica, sans-serif;
     line-height: 1.6;
     font-size: 1rem;
-    color: #333;
-    padding: 2.5rem;
-    border-radius: 2.5rem;
+    color: #383636;
+    margin-left: 5%;
+    margin-right: 5%;
 }
 
 /* Header styles */
@@ -75,12 +75,12 @@ video {
 }
 
 p, ul li {
-    text-align: left;
+    text-align:justify;
     font-size: 1rem;
     margin: 1.5rem;
     margin-top: 0;
     margin-left:0;
-    color: #555;
+    color: #124736;
 }
 
 
@@ -144,34 +144,39 @@ footer {
 }
   
   
-  /* LinkedIn: Blue on hover */
-  .footer-icons a[href*="linkedin"]:hover {
-    color: #0077b5;
-  }
+/* LinkedIn: Blue on hover */
+.footer-icons a[href*="linkedin"]:hover {
+color: #0077b5;
+}
+
+/* ORCID: Olive green on hover */
+.footer-icons a[href*="orcid"]:hover {
+color: olive;
+}
+
+/* ResearchGate: White on hover */
+.footer-icons a[href*="researchgate"]:hover {
+color: black;
+}
   
-  /* ORCID: Olive green on hover */
-  .footer-icons a[href*="orcid"]:hover {
-    color: olive;
-  }
-  
-  /* ResearchGate: White on hover */
-  .footer-icons a[href*="researchgate"]:hover {
-    color: black;
-  }
-  
-.main-content {
+.main-body {
+    margin-left: 3%;
+    margin-right: 3%;
+}  
+.aboutMe-content {
     column-count: 2;
     column-gap: 2rem;
     column-rule: 0.07rem solid #ccc; /* Optional: visual divider */
+    
 }  
 
-.main-content p {
+.aboutMe-content p {
     break-inside: avoid;
 }
 
 /* Responsive Design */
 @media (max-width: 900px) {
-    .main-content {
+    .aboutMe-content {
         column-count: 1;
     }
 
@@ -192,4 +197,20 @@ footer {
     .grid-container, .agrivoltaics-grid-container {
         grid-template-columns: 1fr;
     }
+}
+
+.profile-header {
+    display:grid;
+    margin-left:0;
+    grid-template-columns: 1fr 5fr;
+    align-items: center;
+}
+
+strong {
+    margin-left: 0;
+}
+
+.inline-links {
+    padding: 0;
+    margin: 0;
 }
