--- a/style.css
+++ b/style.css
@@ -214,3 +214,18 @@ strong {
     padding: 0;
     margin: 0;
 }
+
+
+
+
+.heterocyst-figure {
+    display: inside;
+    justify-content: center;
+    max-width: 40%;
+    height: auto;
+    margin: 0 auto 20px;
+}
+
+.cyanobacteria-text {
+    padding-right:20rem;
+}
